--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/build/
+/node_modules/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -23,3 +25,6 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+/.idea/
+/.symfony
