added all functionalities

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,14 @@ framework:
     #esi: true
     #fragments: true
 
+    # HTTP Security Headers
+    http_client:
+        default_options:
+            headers:
+                X-Frame-Options: "SAMEORIGIN" # Защита от Clickjacking
+                X-XSS-Protection: "1; mode=block" # XSS защита
+                Referrer-Policy: "strict-origin-when-cross-origin" # Защита на данните
+
 when@test:
     framework:
         test: true
