--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,29 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+#controllers:
+#    resource:
+#        path: ../src/Controller/
+#        namespace: App\Controller
+#    type: attribute
+
+favicon:
+    path: /favicon.ico
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction
+    defaults:
+        path: /images/favicon.ico
+        permanent: true
+
+app:
+    resource: '../src/Controller/'
     type: attribute
+    prefix: /{_locale}
+    requirements:
+        _locale: 'en|bg'
+    defaults:
+        _locale: bg
+
+redirect_root:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+    defaults:
+        route: user_dashboard
+        permanent: true
+        _locale: bg
