add custom mail

--- a/.env
+++ b/.env
@@ -36,6 +36,8 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 #MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MESSENGER_TRANSPORT_DSN=sync://
+
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|(.+\.)?starter-kit\.org)(:\d+)?$'
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
