--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 parameters:
     uploads_directory: '%kernel.project_dir%/public/uploads'
     kernel.secret: '%env(APP_SECRET)%'
+    app.emails:
+      no_reply: 'no-reply@mailtrap.io'
+      contact: 'contact@mailtrap.io'
 
 services:
     App\Repository\UserRepository:
@@ -30,3 +33,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\EmailService:
+        arguments:
+            $emails: '%app.emails%'
